Fix links id in reference in form
Update & Delete doesn't work yet tough

--- a/views/links.ejs
+++ b/views/links.ejs
@@ -31,7 +31,7 @@
         <tr class='link'>
           <td class='code'><%=link.code%></td>
           <td class='url'><%=link.url%></td>
-          <td class='buttons'><button class="btn-del" data-id="<%=link.id%>">Delete</button>&nbsp;<button class="btn-edit" data-id='<%=link.id%>'>Edit</button></td>
+          <td class='buttons'><button class="btn-del" data-id="<%=link._id%>">Delete</button>&nbsp;<button class="btn-edit" data-id='<%=link._id%>'>Edit</button></td>
         </tr>
 
     <%}); %>
