--- a/views/links.ejs
+++ b/views/links.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <tLinks</title>
+    <title></title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script type="text/javascript" src="/js/admin.js"></script>
     <script type="text/javascript" src="/js/links.js"></script>
